<resources>
    <string name="app_name">CarWash</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>
    <string name="navigation_drawer_orders">Заказы</string>
    <string name="title_orders">Заказы</string>
    <string name="navigation_drawer_statistics">Статистика</string>
    <string name="title_statistics">Статистика</string>
    <string name="navigation_drawer_acc_manag">Управление аккаунтом</string>
    <string name="title_acc_manag">Управление аккаунтом</string>
    <string name="navigation_drawer_setings">Настройки</string>
    <string name="title_setings">Настройки</string>
    <string name="title_transport_category">Категории транспорта</string>
    <string name="navigation_drawer_exit">Выход</string>
    <string name="title_exit">Выход</string>
    <string name="title_add_order">Добавление заказа</string>
    <string name="text_no_orders">У вас еще нет заказов.\n Самое время добавить</string>
    <string name="text_no_catigories">У вас еще нет категорий.\n Самое время добавить</string>
    <string name="text_date">Дата</string>
    <string name="text_hint_date">Дата</string>
    <string name="text_time">Время</string>
    <string name="text_hint_time">Время</string>
    <string name="text_hint_carNumber">Номер автомобиля</string>
    <string name="text_hint_carModel">Марка автомобиля</string>
    <string name="text_category">Категория</string>
</resources>
