<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_orders"
            android:icon="@drawable/history"
            android:title="@string/navigation_drawer_orders" />
        <item
            android:id="@+id/nav_statistics"
            android:icon="@drawable/chart_arc"
            android:title="@string/navigation_drawer_statistics" />
        <item
            android:id="@+id/nav_acc_manager"
            android:icon="@drawable/account_box"
            android:title="@string/navigation_drawer_acc_manag" />
        <item
            android:id="@+id/nav_settings"
            android:icon="@drawable/settings"
            android:title="@string/navigation_drawer_setings" />
        <item
            android:id="@+id/nav_exit"
            android:icon="@drawable/exit_to_app"
            android:title="@string/navigation_drawer_exit" />
    </group>

</menu>
